style/wgo.css
/* Default style sheet for www.gimp.org -- be careful if you edit it. */
/* $Id$ */

/* Copyright (C) 2002-2005 by The GIMP Web Team - Contributions by:
 * Ville Pätsi (drc), Henrik Brix Andersen (brix), Carol Spears
 * (carol), Niklas Mattisson (scizzo), Raphaël Quinet (raphael) and
 * Branko Collin (branko).
 *
 * This style sheet and corresponding site layout are designed to be
 * used on official GIMP web sites only.  You may copy some parts of
 * this file into your own style sheet as long as you create your own
 * design that is significantly different from the one used on GIMP
 * web sites (layout, colors, etc.) and you give appropriate credit if
 * you copy more than a few lines from this file (do not claim that
 * you wrote everything yourself).
 */

body {
  background: #1e2426;
  color: white;
  font-family: candara,arial,"dejavu sans","bitstream vera sans",helvetica,sans-serif;
  margin: 0px;
  padding: 0px;
  font-size: 10pt;
}

a {
  background: transparent;
  color: #f57900;
  font-weight: bold;
}

a[href]:hover {
  background: transparent;
  color: #fcaf3e;
  font-weight: bold;
}

img {
  border: none;
}

img.icon {
  float: left;
  margin: 5px;
}

img.map {
  margin: 0px;
  padding: 0px;
}

img.left {
  float: left;
  margin-left: 40px;
  margin-right: 20px;
}

img.right, object.right {
  float: right;
  margin-left: 20px;
  margin-right: 40px;
}

/* Main header. */
h1 {
  color: #999;
  border-bottom: 1px solid #444;
  max-width: 94%;
  padding: 5px;
  margin-bottom: 1em;
  font-weight: bold;
  font-size: 120%;
  clear: left;
}

/* Subtitle header. */
h2 {
  color: #999;
  font-weight: bold;
  font-size: 110%;
  margin-top: 3em;
  margin-bottom: 1em;
  clear: left;
}

/* Another subtitle using another font-size then the subtitle. */
h3 {
  color: #999;
  font-weight: bold;
  font-size: 110%;
  margin-top: 3em;
  margin-bottom: 1em;
  clear: left;
}



div.book-of-wilber { 
  font-size: large;
  background: #CC9966 url(../images/wilberbook.jpg);
  font-family:  postantiqua, "zapf chancery", "urw chancery l", fantasy;
  border: medium groove;
  padding: 1em;
}

div.news {
    clear: both;
}

p {
  margin: 1.33em 0px;
  margin-left: 40px;
  margin-right: 40px;
}

p.news {
  margin: 0.75em 0px;
  text-align: left;
}

div.news img {
    float: left;
    padding: 0em 1em 0em 0em;
}

p.images img, p.logos img {
  border: none;
}

p.logos img {
  margin: 5px 15px;
}

p.images, p.logos {
  text-align: center;
}




/* Imageslices: work-around to keep the renderer from reserving 
space for the descenders of images by making the images blocks 
instead of inline elements. See 
http://devedge.netscape.com/viewsource/2002/img-table/ for a 
description of the problem. Other than that, 'imageslices' should 
act like 'images'. */

p.imageslices img {
  display: block;
  margin: 0px;
  padding: 0px;
  border: none;
  margin-left: auto;
  margin-right: auto;
}

p.images, p.imageslices {
  text-align: center;
}

p.navindex {
  text-align: center;
  font-size: 80%;
}

span.newstitle {
  float: left;
}

span.newsdate {
  float: right;
}

span.filter {
  font-weight: bold;
}

span.path {
  font-weight: bold;
}

span.different {
  font-weight: bold;
  background-color:   transparent;
  color:              blue;
}

li {
  margin-left: 40px;
  margin-right: 40px;
}

.list li {
  padding-bottom: 1.2em;
}

.list p {
  margin: 0 0 0 0;
}

pre.code {
  color: black;
  background: #f5f5f5;
  border: solid 2px black;
  font-family: monospace;
  white-space: pre;
  margin: 1.33em 0px;
  margin-left: 40px;
  margin-right: 40px;
  padding: 1.33em;
}

pre.debug {
  color: black;
  background: #ddddff;
  border: solid 2px black;
  font-family: monospace;
  white-space: pre;
  margin: 1.33em 0px;
  margin-left: 40px;
  margin-right: 40px;
  padding: 1.33em;
}


pre.text {
  color: black;
  background: #ddddff;
  font-family: monospace;
  white-space: pre;
  margin: 1.33em 0px;
  margin-left: 40px;
  margin-right: 40px;
  padding: 1.33em;
}

em.caution {
  color: #981e49;
  font-weight: bold;
}

em.warn {
  color: #d5a82f;
  font-weight: bold;
}

em.hellbrokeloose {
  color: #c74646;
  font-weight: bold;
}

.help, acronym {
  border-bottom: 1px dashed #9999cc;
  cursor: help;
}

kbd {
  font-weight: bold;
}

td.map {
  margin: 0px;
  padding: 0px;
}

form {
  margin: 1.33em 0px;
  margin-left: 40px;
  margin-right: 40px;
}

.screenshot {
  float: left;
}

.screenshot img {
  width: 240px;
}

/* Changes here should only be done if you know exactly what you are doing.
 * Changes done here will change the appearence of the whole site and should
 * be left up to the designer of the site to change. Contact the designer for
 * more information about the values below. */

#maincontainer {
   max-width: 800px;
   min-height: 600px;
   margin: 0px auto;
   /* border: 1px solid green; */
   background-color: #2e3436;
}

#menu {
  width: 140px;
  float: right;
  /* border: 1px solid red; */
  padding: 20px;
  font-weight: bold;
  white-space: nowrap;
  left: 0px;
  height: 100%;
  margin: 0px;
  background-color: #1e2426;
  -moz-border-radius-bottomleft: 13px;
}

#menu a {
  display: block;
  text-decoration: none;
  width: 140px;
  margin: 2px;
  padding: 2px 4px 2px 8px;
}

#menu a:hover {
  color: #ffdf6e;
  border-left: 2px solid #f57900;
  padding: 2px 2px 2px 6px;
}

#menu a.sub {
  display: block;
  padding-left: 14px;
  font-size: 90%;
}

#menu a.sub:hover {
  padding-left: 12px;
}

#menu span {
  display: none;
}

#menu p {
  display: none;
}

#menubutton {
  background-color: transparent;
  padding: 0;
  position: absolute;
  top: 100px;
  left: 0px;
  cursor: w-resize;
}

#main {
  width: 600px;
  margin: 0px;
  padding: 20px;
  /* border: 1px solid blue; */
}


#linkbar, #navbar {
  width: 790px;
  margin: 0px auto 20px auto;
  padding: 0px;
  clear: both;
  background: #111;
  color: #aaa;
  border-top: 1 px solid #666;
  padding: 5px 5px 5px 5px;
  font-weight: bold;
  font-size: 80%;
  text-align: right;
  height: 70px;
  -moz-border-radius-bottomright: 7px;
  -moz-border-radius-bottomleft: 7px;
}

#header {
   margin: 10px 0px 0px 0px;
   height: 43px;
}

#title {
   width: 800px;
   padding: 0px;
   margin: 0px auto;
   font-size: 12pt;
   font-weight: bold;
   background: #f57900 url('../images/titlebar.png') no-repeat;
   height: 90px;
}

#awards {
   width: 300px;
   margin-left: auto;
   margin-right: 20px;
   text-align: right;
}

.splash {
  width: 620px;
  margin: -20px 0px 0px -20px;
  background-color: #555;
  height: 180px;
  overflow: hidden;
}

.splash img {
  overflow: hidden;
}

.intropara {
  width: 590px;
  margin: 0px 0px 0px -20px;
  background-color: #444;
  padding: 8px 32px 16px 32px;
  line-height: 1.5em;
}

#downloadgimp {

}

#footerleft {
  float: left;
  padding: 20px;
}

#footerright {
  float: right;
  padding: 20px;
}



@media print {
#titlebar, #navbar, #linkbar, #menu {
  display: none
}

#main {
  margin-left: 0px;
  padding-right: 0px;
  padding-left: 0px;
}

}

